
Sat Sep 18 11:04:41 PDT 1999
(Raster)

shen changing numebr of desktops - get rid of the old desktops first before
chanign the number

dont looses as much accuracy when moving pagers in the pager view.

-------------------------------------------------------------------------------

Sat Sep 18 22:58:43 PDT 1999
(Raster)

fix recursive call in iconification. :)

-------------------------------------------------------------------------------

Sat Sep 18 23:10:16 PDT 1999
(Raster)

ok - be paranoid abotu the creation of ximages and if it fails... :)

-------------------------------------------------------------------------------

Sun Sep 19 13:08:30 PDT 1999
(Mandrake)

fixed a compile warning in iconify.c

-------------------------------------------------------------------------------

Sun Sep 19 14:28:18 PDT 1999
(Mandrake)

added another todo bug with kpanel

-------------------------------------------------------------------------------

Mon Sep 20 11:08:01 PDT 1999
(Mandrake)

minor fix that should keep kpanel win_add's from duplicating on map.
(hopefully) - this fixes the desktop change window duplication bugs, too.  I
might have some stacking issues to deal with.


-------------------------------------------------------------------------------

Mon Sep 20 11:53:55 PDT 1999
(Mandrake)

fixed a fairly significant list freeing bug in the kde support.

-------------------------------------------------------------------------------

Mon Sep 20 12:43:48 PDT 1999
(Mandrake)

well, we had some issues with removing the kde dock windows.  that should be
taken care of now (hooked in destroy handler)

-------------------------------------------------------------------------------

Mon Sep 20 13:28:56 PDT 1999
(Mandrake)

Crushed the kpanel tasklist duplication bug via mallet method.
CRUSH CRUSH CRUSH.
Well, you should be able to run netscape again.  if a window duplicates itself
in the taskbar again after this commit, PLEASE let me know.