@@ -3,6 +3,7 @@ raster: 	must update dox docs fully
 cK:		keeping the groups file in sync with the existing groups that need to be remembered. I'm sure there are bugs in that.
 mandrake:   kontrol-center seems to crash E when you click on desktop. needs fixing
 mandrake:   need to write some code to un-override redirect kfm and kpanel so I can manage them easier
+mandrake:   um, don't use close from the kpanel menu right yet.  that's a bad idea.  in fact, I wouldn't use ANY of the kpanel windowops things yet.  (nasty)
 
 FEATURES:
 raster: 	add dnd to iconbox
