@@ -75,7 +75,7 @@ KModuleList;
 
 static KModuleList *KModules = NULL;
 
-void 
+void
 KDE_ClientMessage(Window win, Atom atom, long data, Time timestamp)
 {
 
@@ -98,7 +98,7 @@ KDE_ClientMessage(Window win, Atom atom, long data, Time timestamp)
 
 }
 
-void 
+void
 KDE_ClientTextMessage(Window win, Atom atom, char *data)
 {
 
@@ -120,7 +120,7 @@ KDE_ClientTextMessage(Window win, Atom atom, char *data)
 
 }
 
-void 
+void
 KDE_SendMessagesToModules(Atom atom, long data)
 {
 
@@ -139,7 +139,7 @@ KDE_SendMessagesToModules(Atom atom, long data)
 
 }
 
-void 
+void
 KDE_UpdateFocusedWindow(void)
 {
 
@@ -187,7 +187,7 @@ KDE_UpdateFocusedWindow(void)
 
 }
 
-void 
+void
 KDE_NewWindow(EWin * ewin)
 {
 
@@ -215,7 +215,7 @@ KDE_NewWindow(EWin * ewin)
 
 }
 
-void 
+void
 KDE_RemoveWindow(EWin * ewin)
 {
 
@@ -236,7 +236,7 @@ KDE_RemoveWindow(EWin * ewin)
 
 }
 
-void 
+void
 KDE_AddModule(Window win)
 {
 
@@ -327,7 +327,7 @@ KDE_AddModule(Window win)
 
 }
 
-void 
+void
 KDE_RemoveModule(Window win)
 {
 
@@ -382,7 +382,7 @@ KDE_RemoveModule(Window win)
 
 }
 
-void 
+void
 KDE_Init(void)
 {
    /*
@@ -500,7 +500,7 @@ KDE_Init(void)
 
 }
 
-void 
+void
 KDE_Shutdown(void)
 {
 
@@ -564,7 +564,7 @@ KDE_Shutdown(void)
 
 }
 
-void 
+void
 KDE_ClientInit(Window win)
 {
 
@@ -597,7 +597,7 @@ KDE_ClientInit(Window win)
 
 }
 
-void 
+void
 KDE_ClientChange(Window win, XPropertyEvent * event)
 {
 
@@ -674,7 +674,7 @@ KDE_ClientChange(Window win, XPropertyEvent * event)
 
 }
 
-void 
+void
 KDE_GetDecorationHint(Window win, long *dechints)
 {
 
@@ -744,7 +744,7 @@ KDE_GetDecorationHint(Window win, long *dechints)
 
 }
 
-void 
+void
 KDE_CheckClientHints(Window win)
 {
 
@@ -767,7 +767,7 @@ KDE_CheckClientHints(Window win)
 
 }
 
-int 
+int
 KDE_WindowCommand(EWin * ewin, char *cmd)
 {
 
@@ -823,7 +823,7 @@ KDE_WindowCommand(EWin * ewin, char *cmd)
 
 }
 
-void 
+void
 KDE_Command(char *cmd, XClientMessageEvent * event)
 {
 
@@ -902,7 +902,7 @@ KDE_Command(char *cmd, XClientMessageEvent * event)
 
 }
 
-void 
+void
 KDE_ProcessClientMessage(XClientMessageEvent * event)
 {
 
@@ -956,7 +956,7 @@ KDE_ProcessClientMessage(XClientMessageEvent * event)
 
 }
 
-void 
+void
 KDE_ModuleAssert(Window win)
 {
 
@@ -970,7 +970,7 @@ KDE_ModuleAssert(Window win)
 
 }
 
-void 
+void
 KDE_PrepModuleEvent(Window win, KMessage msg)
 {
 
@@ -1019,7 +1019,7 @@ KDE_PrepModuleEvent(Window win, KMessage msg)
 
 }
 
-void 
+void
 KDE_SetRootArea(void)
 {
 
@@ -1037,7 +1037,7 @@ KDE_SetRootArea(void)
 
 }
 
-void 
+void
 KDE_SetNumDesktops(void)
 {
 
@@ -1073,7 +1073,7 @@ KDE_SetNumDesktops(void)
    EDBUG_RETURN_;
 }
 
-void 
+void
 KDE_HintChange(Atom a)
 {
 
@@ -1097,7 +1097,7 @@ KDE_HintChange(Atom a)
 
 }
 
-void 
+void
 KDE_UpdateTitle(EWin * ewin)
 {
 
